--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
 
 .project-item {
 	display: grid;
-	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: auto auto 1fr;
 	border: 1px dotted whitesmoke;
 }
 
@@ -151,6 +151,7 @@ a {
 	object-fit: contain;
 	-o-object-fit: contain;
 	max-width: 100%;
+	max-height: 9rem;
 }
 
 .align-links {
