update for github due to github styling errors

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ a {
 	gap: 0.75rem;
 	justify-content: space-around;
 	margin-bottom: 1rem;
+	justify-items: flex-end;
 }
 
 /*End of Projects CSS Block*/
